# rem

./: Cargo.toml  caps.cap_frame705.rdc  todo.txt
.rem_old/shaders/: fs.glsl  rect.fs.glsl  rect.vs.glsl
.rem_old/src/: color.rs  config.rs  editor.rs  font.rs  main_window.rs  size.rs  timer.rs
.rem_old/src/editor_core/: mod.rs
.rem_old/src/pane/: layout.rs
.rem_old/src/render/: caches.rs  framebuffer.rs  mod.rs  shader.rs
.rem_old/src/view/: line_cache.rs  mod.rs
captures/: cap2  frame1_init
res/: text_fs.glsl  text_vs.glsl
shaders/: fs.glsl  rect.fs.glsl  rect.vs.glsl  vs.glsl
src/: config.rs  editor.rs  font.rs  main.rs  main_window.rs  pane.rs  render.rs  renderer.rs  shader.rs  size.rs  window.rs
src/editor_core/: mod.rs
src/pane/: editpane.rs  layout.rs  mod.rs  tab.rs
src/render/: caches.rs  framebuffer.rs  mod.rs  render.rs  shader.rs  window.rs
src/view/: line_cache.rs  mod.rs
