[package]
name = "rem"
version = "0.0.1"
authors = ["Andrew Bregger <adb3649@tamu.edu>"]
edition = "2018"
description = "Modal editor written in Rust."

# See more keys d their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.21"
gl = "0.13"
ropey = "1.0"
# Replace nalgrbra with my own implementations. I do not need much for this project.
nalgebra-glm = "0.4"
# Use font-kit instead.
font-kit = "0.4.0"
euclid = "*"
# freetype-rs = "0.20"
log = "0.4"
fern = "0.5"
chrono = "0.4.*"
